# bispectrum

./: .codespell-ignore-words  .cursorrules  .gitignore  .pre-commit-config.yaml  DESIGN.md  NOTES.md  README.md  mataige_et_al_2024.tex  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
benchmarks/: bench_inversion.py  bench_sparse.py  benchmark.py  paper_benchmarks.tex  verify_degree4_filter.py  verify_linear_bootstrap.py  verify_seed_fibre.py
benchmarks/figures/: table_benchmarks.tex
benchmarks/inversion_results/: inversion_stats.tex
docs/: beamer_slides.tex  bispectral_signatures_of_data.tex  inversion_gap_for_octahedral_group.md  mataigne_et_al_2024_neurips.tex  neurips_steerable_bispectrum_plan.md  o_on_r3_implementation_notes.md  o_on_r3_slides.tex  octa_on_octa_implementation_notes.md  octa_on_octa_slides.tex  per_pixel_steerable_bispectrum.tex  selective_so3.md  selective_so3_on_s2_completeness.md  selective_so3_on_s2_completeness.tex  so2_on_d2_implementation_notes.md  steerable_bispectrum_notes.md  steerable_bispectrum_slides.tex
docs/cohen_et_al_2018/: 1801.10130  equivariance_error.pgf  s2cnn.bbl  s2cnn.tex
docs/lantow_miolane_2025/: main.bib  main.tex  preamble.tex
docs/lantow_miolane_2025/sec/: 0_abstract.tex  1_intro.tex  2_related_works.tex  3_background.tex  4_theory.tex  5_tractability.tex  6_mra_experiments.tex  7_conclusion.tex
docs/sanbord_miolane_2025/: main.bbl  main.tex  neurips_2023.sty  references.bib
docs/sanbord_miolane_2025/sections/: 0-abstract.tex  1-introduction.tex  2-background.tex  3-g-invariant-pooling.tex  4-experiments.tex  5-discussion.tex  appendix.tex  checklist.tex  lit-review.tex  scratch.tex
examples/: so3_3_trains.py  so3_deblur_3.py  so3_deblur_demo.py  toy_koopman_bispectrum.py
experiments/organ3d/: README.md  analyze_results.py  data.py  find_budget.py  model.py  run_dataeff_multiseed.sh  run_sweep.sh  run_tier1_sweep.sh  run_wider_multiseed.sh  train.py
experiments/pcam/: .gitignore  README.md  analyze_data_pareto.py  analyze_pareto.py  check_memory.py  data.py  find_growth_rates.py  model.py  run_data_pareto_sweep.sh  run_matched_sweep.sh  train.py
experiments/spherical_mnist/: .gitignore  README.md  analyze_results.py  data.py  find_budget.py  model.py  run_data_efficiency.sh  run_sweep.sh  train.py
experiments/spherical_mnist_reconstruction/: README.md  reconstruct.py
paper/: _verify_fiber.py  _verify_fiber_tree.py  augmentation_results.txt  bibliography.md  bootstrap_complex_rank.py  bootstrap_debug.py  checklist.tex  citation_audit.py  compute_augmentation.py  exact_certificate_results.txt  exact_certificates.py  exp_todos.md. Now here are all the tmux commands  experiment_candidates.md  feedback_nina.md  fiber_search.py  find_minimal_set.py  generate_witness.py  overleaf_backup.tex  overleaf_comments.md  paper.bbl  paper.tex  paper_scaffold_pi_review.blg  paper_scaffold_pi_review.tex  proof_clean.tex  proof_completeness.tex  proof_draft.tex  quick_rank.py  rank_results.txt  references.bib  research_log.md  review_feedback.md  seed_rank_analysis.py  slides.tex  test_sc_fiber.py  test_seed_augment.py  test_uniform_witness.py  verify_bootstrap_complex.py  verify_bootstrap_v2.py  verify_full_rank.py  witness_results.txt
paper/citation_audit/: citation_audit.csv  citation_audit.json  citation_audit.md
paper/citation_audit/papers/: batatia2022mace.link.txt  batatia2024design.link.txt  bejnordi2017camelyon.link.txt  cesa2022program.link.txt  chevalley2024bispectral.link.txt  cohen2016group.link.txt  esteves2018spherical.link.txt  huang2017densenet.link.txt  kakarala1992triple.link.txt  kuipers2023regular.link.txt  loshchilov2019adamw.link.txt  mallat2012scattering.link.txt  mataigne2024selective.link.txt  zhemchuzhnikov2024ilponet.link.txt  (+1 more)
paper/experiments/: NORMALIZED_RERUNS.md  analyze_normalized_results.py  check_manifest.py  export_normalized_latex.py  run_normalized_experiments.sh
src/bispectrum/: __init__.py  _bessel.py  _cg.py  _triton_so3.py  clebsch_gordan.py  cn_on_cn.py  dn_on_dn.py  o_on_r3.py  octa_on_octa.py  rotation.py  so2.py  so2_on_d2.py  so2_on_disk.py  so2_on_s1.py  so3.py  so3_on_b3.py  so3_on_s2.py  spherical.py  torus_on_torus.py
tests/: __init__.py  test_bispectrum.py  test_cg.py  test_cn_on_cn.py  test_coverage_gaps.py  test_dn_on_dn.py  test_import.py  test_o_on_r3.py  test_octa_on_octa.py  test_rotation.py  test_so2.py  test_so2_on_d2.py  test_so2_on_disk.py  test_so2_on_s1.py  test_so3.py  test_so3_on_b3.py  test_so3_on_s2.py  test_torus_on_torus.py
(+675 files in other folders)
